extract more default variables for RedHat based installations

--- a/templates/erlang-solutions.j2
+++ b/templates/erlang-solutions.j2
@@ -1,6 +1,6 @@
 [erlang-solutions]
-name=Centos $releasever - $basearch - Erlang Solutions
-baseurl=http://packages.erlang-solutions.com/rpm/centos/$releasever/$basearch
-gpgcheck=1
+name={{ erlang_yum_repo_name }}
+baseurl={{ erlang_yum_repo_baseurl }}
+gpgcheck={{ erlang_yum_repo_gpgcheck }}
 gpgkey={{ erlang_rpm_key }}
-enabled=1
+enabled={{ erlang_yum_repo_enabled }}
